<resources>
    <string name="app_name">AndroidProject</string>

    <!-- Navbar -->
    <string name="nav_timeline">Timeline</string>
    <string name="nav_manage">Edit Courses</string>
    <string name="fragment_admin_manage">Manage Courses</string>
    <string name="nav_account">Account</string>

    <!-- Fragments -->
    <string name="fragment_main">Main Menu</string>
    <string name="fragment_login">Sign In</string>
    <string name="fragment_register">Sign Up</string>
    <string name="fragment_timeline">Timeline</string>
    <string name="fragment_add_course">Add Course</string>

    <!-- Account Page -->
    <string name="not_logged_in">Not Logged In</string>
    <string name="na">N/A</string>
    <string name="account_info">Account Info</string>
    <string name="account_type">Account Type: %1$s</string>
    <string name="password">Password: %1$s</string>
    <string name="token">Token: %1$s</string>
    <string name="logout">LOGOUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_register">Click To Register</string>
    <string name="click_to_log_in">Click To Log In</string>
    <string name="welcome_to_the_course_manager_application">Welcome to the course manager Application</string>
</resources>