<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_main"
    app:startDestination="@id/fragment_main">

    <fragment
        android:id="@+id/fragment_main"
        android:name="cscb07.group4.androidproject.MainFragment"
        android:label="@string/fragment_main"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_LoginFragment"
            app:destination="@id/fragment_login" />
        <action
            android:id="@+id/action_MainFragment_to_RegisterFragment"
            app:destination="@id/fragment_register" />
    </fragment>

    <fragment
        android:id="@+id/nav_manage"
        android:name="cscb07.group4.androidproject.ManageFragment"
        android:label="Manage Courses"
        tools:layout="@layout/fragment_manage">
    </fragment>

    <fragment
        android:id="@+id/nav_account"
        android:name="cscb07.group4.androidproject.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account">
    </fragment>

    <fragment
        android:id="@+id/fragment_login"
        android:name="cscb07.group4.androidproject.LoginFragment"
        android:label="@string/fragment_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_MainFragment"
            app:destination="@id/fragment_main" />
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/fragment_register" />
    </fragment>

    <fragment
        android:id="@+id/fragment_register"
        android:name="cscb07.group4.androidproject.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/fragment_login" />
    </fragment>
</navigation>