<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WelcomeFragment">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/register2_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:background="#00ff0000"
        android:text="@string/click_to_register"
        android:textColor="#BCBCBC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login2_button"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/login2_button"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="336dp"
        android:background="#00ff0000"
        android:elevation="0dp"
        android:fontFamily="sans-serif"
        android:text="@string/click_to_log_in"
        android:textColor="#BCBCBC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_the_course_manager_application"
        android:textAlignment="center"
        android:textColor="#BCBCBC"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>